--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--CSS Styles -->
-    <link rel="stylesheet" href="styls.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
 
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="apple-touch-icon.png"
+      href="assets/icons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="favicon-32x32.png"
+      href="assets/icons/favicon-32x32.png"
     />
 
   </head>
@@ -106,7 +106,7 @@
     </section>
 
     <!-- Website scripts -->
-    <script src="app.js"></script>
+    <script src="assets/js/app.js"></script>
 
     <!-- Ion icons scripts -->
     <script
